names updated to match playlist title

--- a/iptv/eeetv/www/css/rc.css
+++ b/iptv/eeetv/www/css/rc.css
@@ -86,67 +86,67 @@ button[disabled] {
 /*    background-image: url(/logo/filename.png); */
 /* } */
 
-button[name="dajto"] {
+button[name="Dajto"] {
     background-image: url(/logo/dajto.png);
 }
 
-button[name="doma"] {
+button[name="Doma"] {
     background-image: url(/logo/doma.png);
 }
 
-button[name="markíza"] {
+button[name="Markíza"] {
     background-image: url(/logo/markiza.png);
 }
 
-button[name="stv1"] {
+button[name="STV1"] {
     background-image: url(/logo/STV1.png);
 }
 
-button[name="stv2"] {
+button[name="STV2"] {
     background-image: url(/logo/STV2.png);
 }
 
-button[name="stv3"] {
+button[name="STV3"] {
     background-image: url(/logo/stv3.png);
 }
 
-button[name="stv4"] {
+button[name="STV4"] {
     background-image: url(/logo/stv4.png);
 }
 
-button[name="joj"] {
+button[name="Joj"] {
     background-image: url(/logo/joj.png);
 }
 
-button[name="joj+"] {
+button[name="Joj+"] {
     background-image: url(/logo/joj_plus.png);
 }
 
-button[name="joj family"] {
+button[name="Joj Family"] {
     background-image: url(/logo/joj_family.png);
 }
 
-button[name="joj cinema"] {
+button[name="Joj Cinema"] {
     background-image: url(/logo/joj_cinema.png);
 }
 
-button[name="ta3"] {
+button[name="TA3"] {
     background-image: url(/logo/TA3.png);
 }
 
-button[name="wau"] {
+button[name="Wau"] {
     background-image: url(/logo/wau.png);
 }
 
-button[name="lux"] {
+button[name="Lux"] {
     background-image: url(/logo/lux.png);
 }
 
-button[name="osem"] {
+button[name="Osem"] {
     background-image: url(/logo/tv8.png);
 }
 
-button[name="tv hronka"] {
+button[name="TV Hronka"] {
     background-image: url(/logo/hronka.png);
 }
 
@@ -158,230 +158,230 @@ button[name="ČT2"] {
     background-image: url(/logo/ct2.png);
 }
 
-button[name="amc"] {
+button[name="AMC"] {
     background-image: url(/logo/amc.png);
 }
 
-button[name="cs film"] {
+button[name="CS Film"] {
     background-image: url(/logo/csfilm.png);
 }
 
-button[name="film+"] {
+button[name="Film+"] {
     background-image: url(/logo/film-plus.png);
 }
 
-button[name=filmbox] {
+button[name="FilmBox"] {
     background-image: url(/logo/filmbox.png);
 }
 
-button[name="kino svet"] {
+button[name="Kino svet"] {
     background-image: url(/logo/kinosvet.png);
 }
 
-button[name="tv paprika"] {
+button[name="TV Paprika"] {
     background-image: url(/logo/paprika.png);
 }
 
-button[name="fashion tv"] {
+button[name="Fashion TV"] {
     background-image: url(/logo/fashion.png);
 }
 
-button[name="elektrik tv"] {
+button[name="Elektrik TV"] {
     background-image: url(/logo/elektrik.png);
 }
 
-button[name="spektrum"] {
+button[name="Spektrum"] {
     background-image: url(/logo/spektrum-hd.png);
 }
 
-button[name="via history"] {
+button[name="Via History"] {
     background-image: url(/logo/viasat-history.png);
 }
 
-button[name="discovery"] {
+button[name="Discovery"] {
     background-image: url(/logo/discovery.png);
 }
 
-button[name="science"] {
+button[name="Science"] {
     background-image: url(/logo/discovery-science.png);
 }
 
-button[name="prima"] {
+button[name="Prima"] {
     background-image: url(/logo/prima.png);
 }
 
-button[name="prima cool"] {
+button[name="Prima Cool"] {
     background-image: url(/logo/prima_cool.png);
 }
 
-button[name="prima zoom"] {
+button[name="Prima Zoom"] {
     background-image: url(/logo/prima_zoom.png);
 }
 
-button[name="prima max"] {
+button[name="Prima Max"] {
     background-image: url(/logo/prima_max.png);
 }
 
-button[name="nova"] {
+button[name="Nova"] {
     background-image: url(/logo/nova.png);
 }
 
-button[name="nova action"] {
+button[name="Nova Action"] {
     background-image: url(/logo/nova_action.png);
 }
 
-button[name="nova gold"] {
+button[name="Nova Gold"] {
     background-image: url(/logo/nova_gold.png);
 }
 
-button[name="nova cinema"] {
+button[name="Nova Cinema"] {
     background-image: url(/logo/nova_cinema.png);
 }
 
-button[name="cinemax"] {
+button[name="Cinemax"] {
     background-image: url(/logo/cinemax.png);
 }
 
-button[name="cinemax 2"] {
+button[name="Cinemax 2"] {
     background-image: url(/logo/cinemax2.png);
 }
 
-button[name="hbo"] {
+button[name="HBO"] {
     background-image: url(/logo/hbo.png);
 }
 
-button[name="hbo 2"] {
+button[name="HBO 2"] {
     background-image: url(/logo/hbo2.png);
 }
 
-button[name="Očko gold"] {
+button[name="Očko Gold"] {
     background-image: url(/logo/ocko.png);
 }
 
-button[name="tv raj"] {
+button[name="TV Raj"] {
     background-image: url(/logo/tvraj.png);
 }
 
-button[name="mall tv"] {
+button[name="Mall TV"] {
     background-image: url(/logo/mall-tv.png);
 }
 
-button[name="info vojna"] {
+button[name="Info Vojna"] {
     background-image: url(/logo/infovojna.png);
 }
 
-button[name="radio info.vojna"] {
+button[name="Radio Info Vojna"] {
     background-image: url(/logo/infovojna-radio.png);
 }
 
-button[name="retro"] {
+button[name="Retro"] {
     background-image: url(/logo/retro.png);
 }
 
-button[name="vh 1"] {
+button[name="VH 1"] {
     background-image: url(/logo/vh1.png);
 }
 
-button[name="monte carlo"] {
+button[name="Monte Carlo"] {
     background-image: url(/logo/monte-carlo.png);
 }
 
-button[name="nasa tv"] {
+button[name="NASA TV"] {
     background-image: url(/logo/nasatv.png);
 }
 
-button[name="rt news"] {
+button[name="RT News"] {
     background-image: url(/logo/rt.png);
 }
 
-button[name="rt usa"] {
+button[name="RT News USA"] {
     background-image: url(/logo/rt-usa.png);
 }
 
-button[name="rt uk"] {
+button[name="RT News UK"] {
     background-image: url(/logo/rt-uk.png);
 }
 
-button[name="rt doc"] {
+button[name="RT Doc"] {
     background-image: url(/logo/rt-doc.png);
 }
 
-button[name="ruptly"] {
+button[name="Ruptly HoC"] {
     background-image: url(/logo/ruptly.png);
 }
 
-button[name="zdravie ru"] {
+button[name="zdravie RU"] {
     background-image: url(/logo/zdravie.png);
 }
 
-button[name="da vinci ru"] {
+button[name="Da Vinci RU"] {
     background-image: url(/logo/da_vinci_learning.png);
 }
 
-button[name="nauka ru"] {
+button[name="Nauka RU"] {
     background-image: url(/logo/nauka.png);
 }
 
-button[name="pervyj 1"] {
+button[name="Pervyj 1"] {
     background-image: url(/logo/pervyj_kanal.png);
 }
 
-button[name="rossia 1"] {
+button[name="Rossia 1"] {
     background-image: url(/logo/rossia_1.png);
 }
 
-button[name="rossia 24"] {
+button[name="Rossia 24"] {
     background-image: url(/logo/rossia_24.png);
 }
 
-button[name="kaleidoskop ru"] {
+button[name="Kaleidoskop RU"] {
     background-image: url(/logo/kaleidoskop-tv.png);
 }
 
-button[name="hit music"] {
+button[name="Hit Music"] {
     background-image: url(/logo/hit-music.png);
 }
 
-button[name="fox news"] {
+button[name="Fox News"] {
     background-image: url(/logo/fox_news.png);
 }
 
-button[name="fox business"] {
+button[name="Fox Business"] {
     background-image: url(/logo/fox-business.png);
 }
 
-button[name="cnbc"] {
+button[name="CNBC"] {
     background-image: url(/logo/cnbc.png);
 }
 
-button[name="msnbc"] {
+button[name="MSNBC"] {
     background-image: url(/logo/msnbc.png);
 }
 
-button[name="pbs"] {
+button[name="PBS"] {
     background-image: url(/logo/pbs.png);
 }
 
-button[name="syfy"] {
+button[name="SyFy"] {
     background-image: url(/logo/sci-fi.png);
 }
 
-button[name="e!"] {
+button[name="E!"] {
     background-image: url(/logo/e.png);
 }
 
-button[name="cnn"] {
+button[name="CNN"] {
     background-image: url(/logo/cnn.png);
 }
 
-button[name="abc"] {
+button[name="ABC"] {
     background-image: url(/logo/abc.png);
 }
 
-button[name="abc news"] {
+button[name="ABC News"] {
     background-image: url(/logo/abc-news.png);
 }
 
-button[name="sky news"] {
+button[name="Sky News"] {
     background-image: url(/logo/sky-news.png);
 }
