tv channel name fixed

--- a/iptv/eeetv/www/css/rc.css
+++ b/iptv/eeetv/www/css/rc.css
@@ -330,7 +330,7 @@ button[name="RT Doc"] {
     background-image: url(/logo/rt-doc.png);
 }
 
-button[name="Ruptly HoC"] {
+button[name="Ruptly"] {
     background-image: url(/logo/ruptly.png);
 }
 
